--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,4 @@ spring:
     password: pass
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
+    show-sql: true
