--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,11 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+        jcenter()
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.unbroken-dome.gradle-plugins:gradle-testsets-plugin:1.4.5")
 	}
 }
 
@@ -14,6 +16,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.unbroken-dome.test-sets'
 
 group = 'com.thoughtworks'
 version = '0.0.1-SNAPSHOT'
@@ -28,8 +31,16 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.flywaydb:flyway-core')
-	compile('org.projectlombok:lombok')
     compile('org.springframework.boot:spring-boot-devtools')
+    compileOnly('org.projectlombok:lombok')
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('io.rest-assured:rest-assured:3.1.0')
+    testCompile('com.github.database-rider:rider-spring:1.2.9') {
+        exclude group: 'org.slf4j', module: 'slf4j-simple'
+    }
+}
+
+testSets {
+    integTest
 }
