--- a/build.gradle
+++ b/build.gradle
@@ -26,14 +26,20 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	springCloudVersion = 'Finchley.SR1'
+}
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-devtools')
+	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
 	compile('org.flywaydb:flyway-core')
-    compile('org.springframework.boot:spring-boot-devtools')
-    compileOnly('org.projectlombok:lombok')
+
 	runtime('mysql:mysql-connector-java')
+	compileOnly('org.projectlombok:lombok')
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('io.rest-assured:rest-assured:3.1.0')
     testCompile('com.github.database-rider:rider-spring:1.2.9') {
@@ -43,4 +49,10 @@ dependencies {
 
 testSets {
     integTest
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
