--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: order-server
   datasource:
     url: jdbc:mysql://localhost:3306/tw_mall?useUnicode=true&characterEncoding=utf-8
     username: root
@@ -6,3 +8,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     show-sql: true
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
